# lihee-server

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: model.proto  service.proto
src/: config.rs  main.rs
src/datasource/: common.rs  elasticsearch.rs  mod.rs
