[package]
name = "lihee-server"
version = "0.1.0"
authors = ["jangjunha <jangjunha113@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
elasticsearch = "7.12.0-alpha.1"
log = "0.4"
tonic = "0.4"
prost = "0.7"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"

async-trait = "*"
async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
url = "*"

[build-dependencies]
tonic-build = "0.4"
